syntax = "proto3";
package DomainServices.ProductService;
option csharp_namespace = "DomainServices.ProductService.Contracts";

import "google/protobuf/wrappers.proto";
import "GrpcDecimal.proto";
import "NullableGrpcDate.proto";


message CaseIdRequest {
   int64 CaseId = 1;
}

message ProductIdReqRes {
   int64 ProductId = 1;
}

message GetProductListResponse {
  repeated Product Products = 1;
}

message GetMortgageResponse {
  MortgageData Mortgage = 1;
}

message CreateMortgageRequest {
  int64 CaseId = 1;
  MortgageData Mortgage = 2;
}

message UpdateMortgageRequest {
  int64 ProductId = 1;
  MortgageData Mortgage = 2;		 
}

message CreateContractRelationshipRequest {
  int64 ProductId = 1;
  Relationship Relationship = 2;
}

message DeleteContractRelationshipRequest {
  int64 ProductId = 1;
  int32 PartnerId = 2;
}


message MortgageData {
	google.protobuf.Int64Value PartnerId = 1;
	string ContractNumber = 2;
	cis.types.GrpcDecimal LoanAmount = 3; // to nullable
	cis.types.GrpcDecimal LoanInterestRate = 4; // to nullable
	google.protobuf.Int32Value FixedRatePeriod = 5;
	int32 ProductTypeId = 6;
	cis.types.GrpcDecimal LoanPaymentAmount = 7; // to nullable
	google.protobuf.Int32Value LoanActionCode = 8;
	cis.types.GrpcDecimal CurrentAmount = 9;
	cis.types.NullableGrpcDate DrawingMaxOn = 10;
	cis.types.NullableGrpcDate VUP = 11;
	google.protobuf.BoolValue Statement = 12;
	repeated Relationship Relationships = 13;

	google.protobuf.Int64Value CaseId = 20; //???
}

message Relationship {
	int32 PartnerId = 1;
	int32 ContractRelationshipTypeId = 2;
}

message Product {
	int64 ProductId = 1;
	int32 ProductTypeId = 2;
}
